fixed contact button iphone

--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -573,4 +573,7 @@ nav {
       margin: 0px 0px 0px 0px!important;
     }
 
+    #contact_form {
+      max-height: 250px;
+    }
   }
